force-app/main/default/objects/Account/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <description>Referring Broker</description>
    <label>Broker</label>
    <type>TextArea</type>
</CustomField>