force-app/main/default/objects/Account/fields/Broker_Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission_Type__c</fullName>
    <label>Broker Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% of Admin</fullName>
                <default>true</default>
                <label>% of Admin</label>
            </value>
            <value>
                <fullName>% of Billed Premium</fullName>
            </value>
            <value>
                <fullName>% of Gross Wages</fullName>
            </value>
            <value>
                <fullName>% of Gross Margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>