force-app/main/default/objects/Account/fields/Business_Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Establishment_Date__c</fullName>
    <label>Business Establishment Date</label>
    <type>Date</type>
</CustomField>