force-app/main/default/objects/Account/fields/Client_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Client_Payment_Method__c</fullName>
    <label>Client Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Payment by Wire</fullName>
            </value>
            <value>
                <fullName>Wire Drawdown</fullName>
            </value>
            <value>
                <fullName>Certified Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>