force-app/main/default/objects/Account/fields/Client_Payroll_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Payroll_Contact__c</fullName>
    <label>Client Payroll Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>