force-app/main/default/objects/Account/fields/Company_website__c.field-meta.xml
<CustomField>
    <fullName>Company_website__c</fullName>
    <label>Company website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>