force-app/main/default/objects/Account/fields/Employee_Direct_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Employee_Direct_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Direct Deposit</label>
    <type>Checkbox</type>
</CustomField>