force-app/main/default/objects/Account/fields/Employees_with_Court_Ordered_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Employees_with_Court_Ordered_Deductions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employees with Court Ordered Deductions</label>
    <type>Checkbox</type>
</CustomField>