force-app/main/default/objects/Account/fields/Enhanced_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if the account is a priority client that requires enhanced notifications to targeted Account Team members.</description>
    <inlineHelpText>FOR IT ONLY. DON&apos;T USE.</inlineHelpText>
    <label>Enhanced Notifications</label>
    <type>Checkbox</type>
</CustomField>