force-app/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>1 - C Corp
2 - S Corp
3 - Ltd Liab Corp
4 - Partner
5 - Prop
6 - Joint Venture
7 - Non Profit
8 - Other</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity_Type</valueSetName>
    </valueSet>
</CustomField>