force-app/main/default/objects/Account/fields/Federal_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID_Number__c</fullName>
    <externalId>true</externalId>
    <label>Federal ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>