force-app/main/default/objects/Account/fields/File_Test__c.field-meta.xml
<CustomField>
    <fullName>File_Test__c</fullName>
    <label>File Test</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>