force-app/main/default/objects/Account/fields/First_Months_Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>First_Months_Gross_Wages__c</fullName>
    <inlineHelpText>Total first month&apos;s wages as a client</inlineHelpText>
    <label>First Months Gross Wages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>