force-app/main/default/objects/Account/fields/First_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payroll_Date__c</fullName>
    <inlineHelpText>Date on which first payroll was run.</inlineHelpText>
    <label>First Payroll Date</label>
    <type>Date</type>
</CustomField>