force-app/main/default/objects/Account/fields/FUTA_SUTA__c.field-meta.xml
<CustomField>
    <fullName>FUTA_SUTA__c</fullName>
    <label>FUTA/SUTA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capped</fullName>
            </value>
            <value>
                <fullName>No Capps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>