force-app/main/default/objects/Account/fields/Invoice_Format__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Format__c</fullName>
    <label>Invoice Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bundled</fullName>
            </value>
            <value>
                <fullName>Detailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>