force-app/main/default/objects/Account/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Salespersons Manager</description>
    <label>Manager</label>
    <type>TextArea</type>
</CustomField>