force-app/main/default/objects/Account/fields/Manager_Commission__c.field-meta.xml
<CustomField>
    <fullName>Manager_Commission__c</fullName>
    <label>Manager Commission</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>