force-app/main/default/objects/Account/fields/Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Locations</label>
    <type>Checkbox</type>
</CustomField>