force-app/main/default/objects/Account/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>