force-app/main/default/objects/Account/fields/Paying_Insurance_401_k_etc__c.field-meta.xml
<CustomField>
    <fullName>Paying_Insurance_401_k_etc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Providing Insurance, 401(k), etc.</label>
    <type>Checkbox</type>
</CustomField>