force-app/main/default/objects/Account/fields/Payroll_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Delivery_Method__c</fullName>
    <label>Payroll Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>US Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>