force-app/main/default/objects/Account/fields/Payroll_Email__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Email__c</fullName>
    <label>Client Payroll Email</label>
    <type>Email</type>
</CustomField>