force-app/main/default/objects/Account/fields/Payroll_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Submission_Method__c</fullName>
    <label>Payroll Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>