force-app/main/default/objects/Account/fields/Payroll_survey_last_sent_on__c.field-meta.xml
<CustomField>
    <fullName>Payroll_survey_last_sent_on__c</fullName>
    <label>Payroll survey last sent on</label>
    <type>Date</type>
</CustomField>