force-app/main/default/objects/Account/fields/Projected_True_Wages__c.field-meta.xml
<CustomField>
    <fullName>Projected_True_Wages__c</fullName>
    <formula>First_Months_Gross_Wages__c  * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First Months Wages x 12</inlineHelpText>
    <label>Projected True Wages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>