force-app/main/default/objects/Account/fields/Proposal_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Client_Name__c</fullName>
    <formula>IF(
ISBLANK(DBA__c),  Name, Name &amp; &quot; dba &quot; &amp; DBA__c)</formula>
    <label>Proposal Client Name</label>
    <type>Text</type>
</CustomField>