force-app/main/default/objects/Account/fields/Second_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Second_Salesperson__c</fullName>
    <label>Second Salesperson</label>
    <type>TextArea</type>
</CustomField>