force-app/main/default/objects/Account/fields/Second_Salesperson_Commission__c.field-meta.xml
<CustomField>
    <fullName>Second_Salesperson_Commission__c</fullName>
    <label>Second Salesperson Commission</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>