force-app/main/default/objects/Account/fields/Send_First_Payroll_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_First_Payroll_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will send the first payroll survey to the payroll contact.</inlineHelpText>
    <label>Send First Payroll Survey?</label>
    <type>Checkbox</type>
</CustomField>