force-app/main/default/objects/Account/fields/Send_Survey_Again__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey_Again__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Survey Again</label>
    <type>Checkbox</type>
</CustomField>