force-app/main/default/objects/Account/fields/Sick_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Sick_Accrual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sick Accrual</label>
    <type>Checkbox</type>
</CustomField>