force-app/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF(BillingState = &quot;New Hampshire&quot;, &quot;New_Hampshire&quot;,
IF(BillingState = &quot;New Jersey&quot;, &quot;New_Jersey&quot;,
IF(BillingState = &quot;New Mexico&quot;, &quot;New Mexico&quot;,
IF(BillingState = &quot;New York&quot;, &quot;New_York&quot;,
IF(BillingState = &quot;North Carolina&quot;, &quot;North_Carolina&quot;,
IF(BillingState = &quot;North Dakota&quot;, &quot;North_Dakota&quot;,
IF(BillingState = &quot;Rhode Island&quot;, &quot;Rhode_Island&quot;,
IF(BillingState = &quot;South Carolina&quot;, &quot;South_Carolina&quot;,
IF(BillingState = &quot;South Dakota&quot;, &quot;South_Dakota&quot;,
IF(BillingState = &quot;West Virginia&quot;, &quot;West_Virginia&quot;,  
BillingState))))))))))</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>