force-app/main/default/objects/Account/fields/Suggested_Credit_Limit_Moderate__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Credit_Limit_Moderate__c</fullName>
    <label>Suggested Credit Limit-Moderate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>