force-app/main/default/objects/Account/fields/Survey_Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Email Bounced</label>
    <type>Checkbox</type>
</CustomField>