force-app/main/default/objects/Account/fields/SUTA_Client_Reporting__c.field-meta.xml
<CustomField>
    <fullName>SUTA_Client_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SUTA Client Reporting</label>
    <type>Checkbox</type>
</CustomField>