force-app/main/default/objects/Account/fields/SUTA_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>SUTA_ID_Number__c</fullName>
    <label>SUTA ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>