force-app/main/default/objects/Account/fields/toBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>toBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>toBeDeleted</label>
    <type>Checkbox</type>
</CustomField>