force-app/main/default/objects/Account/fields/Trion_Location__c.field-meta.xml
<CustomField>
    <fullName>Trion_Location__c</fullName>
    <label>Trion Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trion South</fullName>
            </value>
            <value>
                <fullName>Trion North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>