force-app/main/default/objects/Account/fields/Trion_Payroll_Rep__c.field-meta.xml
<CustomField>
    <fullName>Trion_Payroll_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trion Payroll Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>