force-app/main/default/objects/Account/fields/Under_Payroll_Support__c.field-meta.xml
<CustomField>
    <fullName>Under_Payroll_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Payroll Support</label>
    <type>Checkbox</type>
</CustomField>