force-app/main/default/objects/Account/fields/Unions__c.field-meta.xml
<CustomField>
    <fullName>Unions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unions</label>
    <type>Checkbox</type>
</CustomField>