force-app/main/default/objects/Account/fields/Vacation_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Accrual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vacation Accrual</label>
    <type>Checkbox</type>
</CustomField>