force-app/main/default/objects/Account/fields/Yrs_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Yrs_in_Business__c</fullName>
    <formula>(ABS(YEAR(TODAY())-YEAR(Business_Establishment_Date__c )))</formula>
    <label>Yrs in Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>