force-app/main/default/objects/Account/recordTypes/Carrier.recordType-meta.xml
<RecordType>
    <fullName>Carrier</fullName>
    <active>true</active>
    <label>Carrier</label>
</RecordType>