force-app/main/default/objects/Account/recordTypes/NonClient.recordType-meta.xml
<RecordType>
    <fullName>NonClient</fullName>
    <active>true</active>
    <label>Non-Client</label>
</RecordType>