force-app/main/default/objects/Account/validationRules/Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Required</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISBLANK(BillingStreet ),
ISBLANK( BillingCity ),
ISBLANK(BillingState ),
ISBLANK( BillingPostalCode ),
ISBLANK( BillingStreet))</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Billing Address is required for all accounts.</errorMessage>
</ValidationRule>