force-app/main/default/objects/Account/validationRules/Certified_Payroll_Reporting.validationRule-meta.xml
<ValidationRule>
    <fullName>Certified_Payroll_Reporting</fullName>
    <active>false</active>
    <description>Requires the number of certified payroll reporting if Certified Payroll Reporting equals TRUE</description>
    <errorConditionFormula>AND( Certified_Payroll_Reporting__c   = TRUE,ISBLANK( NumberOfCertifedPayrollReporting__c ))</errorConditionFormula>
    <errorMessage>Enter the number of certified payroll reporting</errorMessage>
</ValidationRule>