force-app/main/default/objects/Account/validationRules/Client_Instructions_for_Email_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Instructions_for_Email_Payment</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Payroll_Submission_Method__c , &quot;Email&quot;),
ISBLANK( Client_Instructions_for_Email_Payment__c )
)</errorConditionFormula>
    <errorMessage>Enter the client instructions for Email Payroll Method</errorMessage>
</ValidationRule>