force-app/main/default/objects/Account/validationRules/Federal_Id_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Federal_Id_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
LEN( Federal_ID_Number__c ) &gt; 0,
(OR(
LEN(Federal_ID_Number__c) &lt;&gt; 10,  
FIND(&quot;-&quot;,Federal_ID_Number__c) &lt;&gt; 3,  
NOT(ISNUMBER(LEFT(Federal_ID_Number__c, 2))),  
NOT(ISNUMBER(RIGHT(Federal_ID_Number__c, 7))))))</errorConditionFormula>
    <errorDisplayField>Federal_ID_Number__c</errorDisplayField>
    <errorMessage>FEIN must be in the following format: ##-#######</errorMessage>
</ValidationRule>