force-app/main/default/objects/Account/validationRules/First_Payroll_Survey_Sent_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Payroll_Survey_Sent_Requirements</fullName>
    <active>true</active>
    <description>For sending the first payroll survey, date on which the client&apos;s payroll was run and client payroll email must be entered.</description>
    <errorConditionFormula>NOT($Setup.Survey_Settings__c.Enable_Surveys__c) &amp;&amp; Send_First_Payroll_Survey__c &amp;&amp; (ISBLANK(Payroll_Email__c) || ISBLANK(First_Payroll_Date__c))</errorConditionFormula>
    <errorMessage>For sending the first payroll survey, date on which the client&apos;s payroll was run and client payroll email must be entered.</errorMessage>
</ValidationRule>