force-app/main/default/objects/Account/validationRules/Number_of_Unions.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Unions</fullName>
    <active>false</active>
    <description>Requires the number of unions if Client has unions</description>
    <errorConditionFormula>AND(Unions__c  = TRUE,ISBLANK(NumberofUnions__c))</errorConditionFormula>
    <errorMessage>Enter the number of unions</errorMessage>
</ValidationRule>