force-app/main/default/objects/Account/validationRules/Suta_Client_Reporting.validationRule-meta.xml
<ValidationRule>
    <fullName>Suta_Client_Reporting</fullName>
    <active>true</active>
    <description>Requires Rate if SUTA Client Reporting equals TRUE</description>
    <errorConditionFormula>AND(SUTA_Client_Reporting__c   = TRUE,ISBLANK(Rate__c ))</errorConditionFormula>
    <errorDisplayField>Rate__c</errorDisplayField>
    <errorMessage>Enter the Rate</errorMessage>
</ValidationRule>