force-app/main/default/objects/Account/validationRules/SUTA_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>SUTA_ID</fullName>
    <active>true</active>
    <description>Requires SUTA ID if SUTA Client Reporting equals TRUE</description>
    <errorConditionFormula>AND(SUTA_Client_Reporting__c   = TRUE,ISBLANK( SUTA_ID_Number__c ))</errorConditionFormula>
    <errorDisplayField>Rate__c</errorDisplayField>
    <errorMessage>Enter the Rate</errorMessage>
</ValidationRule>