force-app/main/default/objects/Account/validationRules/Website.validationRule-meta.xml
<ValidationRule>
    <fullName>Website</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Company_website__c , &quot;Yes&quot;),
ISBLANK( Website ))</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Enter the clients website</errorMessage>
</ValidationRule>