force-app/main/default/objects/Account/listViews/My_Broker_Agencies.listView-meta.xml
<ListView>
    <fullName>My_Broker_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Trion_Location__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Broker/Agency Firm</value>
    </filters>
    <label>My Broker/Agencies</label>
    <sharedTo></sharedTo>
</ListView>