force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Business_Type__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>Federal_ID_Number__c</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>