force-app/main/default/objects/Account/listViews/Trion_South_Brokers.listView-meta.xml
<ListView>
    <fullName>Trion_South_Brokers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trion_Location__c</field>
        <operation>equals</operation>
        <value>Trion South</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Broker/Agency Firm</value>
    </filters>
    <label>Trion South Brokers</label>
    <sharedTo></sharedTo>
</ListView>